--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -1,5 +1,5 @@
 microservice-chart:
-  namespace: "ecommerce"
+  namespace: "default"
   nameOverride: ""
   fullnameOverride: ""
   canaryDelivery:
@@ -56,7 +56,7 @@ microservice-chart:
   ingress:
     create: true
     host: "weuprod.ecommerce.internal.platform.pagopa.it"
-    path: /pagopa-ecommerce-event-dispatcher/(.*)
+    path: /pagopa-ecommerce-event-dispatcher-test/(.*)
     servicePort: 9000
   serviceAccount:
     create: false
@@ -96,25 +96,25 @@ microservice-chart:
           type: Utilization # Allowed types are 'Utilization' or 'AverageValue'
           value: "70"
   envConfig:
-    TRANSACTIONS_CLOSE_PAYMENT_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-close-payment-queue
-    TRANSACTIONS_CLOSE_PAYMENT_RETRY_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-close-payment-retry-queue
-    TRANSACTIONS_EXPIRATION_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-expiration-queue
-    TRANSACTIONS_REFUND_RETRY_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-refund-retry-queue
-    TRANSACTIONS_REFUND_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-refund-queue
-    TRANSACTIONS_NOTIFICATIONS_RETRY_QUEUE_NAME: pagopa-p-weu-ecommerce-transaction-notifications-retry-queue
-    TRANSACTIONS_NOTIFICATIONS_QUEUE_NAME: pagopa-p-weu-ecommerce-transaction-notifications-queue
-    TRANSACTIONS_DEAD_LETTER_QUEUE_NAME: pagopa-p-weu-ecommerce-transactions-dead-letter-queue
-    TRANSACTIONS_AUTHORIZATION_REQUESTED_QUEUE_NAME: pagopa-p-weu-ecommerce-transaction-auth-requested-queue
-    TRANSACTIONS_AUTHORIZATION_OUTCOME_WAITING_QUEUE_NAME: pagopa-p-weu-ecommerce-transaction-auth-outcome-waiting-queue
-    PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.platform.pagopa.it/payment-transactions-gateway/internal/v1
-    PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "15000"
+    TRANSACTIONS_CLOSE_PAYMENT_QUEUE_NAME: fake
+    TRANSACTIONS_CLOSE_PAYMENT_RETRY_QUEUE_NAME: fake
+    TRANSACTIONS_EXPIRATION_QUEUE_NAME: fake
+    TRANSACTIONS_REFUND_RETRY_QUEUE_NAME: fake
+    TRANSACTIONS_REFUND_QUEUE_NAME: fake
+    TRANSACTIONS_NOTIFICATIONS_RETRY_QUEUE_NAME: fake
+    TRANSACTIONS_NOTIFICATIONS_QUEUE_NAME: fake
+    TRANSACTIONS_DEAD_LETTER_QUEUE_NAME: fake
+    TRANSACTIONS_AUTHORIZATION_REQUESTED_QUEUE_NAME: fake
+    TRANSACTIONS_AUTHORIZATION_OUTCOME_WAITING_QUEUE_NAME: fake
+    PAYMENT_TRANSACTIONS_GATEWAY_URI: http://localhost
+    PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
     PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: "10000"
-    NODO_URI: https://api.platform.pagopa.it/nodo/nodo-per-pm/v2
+    NODO_URI: http://localhost
     NODO_READ_TIMEOUT: "14000"
     NODO_CONNECTION_TIMEOUT: "14000"
     NODO_ECOMMERCE_CLIENT_ID: ecomm
-    MONGO_HOST: pagopa-p-weu-ecommerce-cosmos-account.mongo.cosmos.azure.com
-    MONGO_USERNAME: pagopa-p-weu-ecommerce-cosmos-account
+    MONGO_HOST: localhost
+    MONGO_USERNAME: fake
     MONGO_PORT: "10255"
     MONGO_SSL_ENABLED: "true"
     MONGO_MIN_POOL_SIZE: "0"
@@ -137,14 +137,14 @@ microservice-chart:
     NOTIFICATION_RETRY_EVENT_MAX_ATTEMPTS: "3"
     AUTHORIZATION_OUTCOME_WAITING_EVENT_BASE_INTERVAL_SECONDS: "80"
     AUTHORIZATION_OUTCOME_WAITING_EVENT_MAX_ATTEMPTS: "3"
-    NOTIFICATIONS_SERVICE_URI: https://api.platform.pagopa.it/ecommerce/notifications-service/v1
+    NOTIFICATIONS_SERVICE_URI: http://localhost
     NOTIFICATIONS_SERVICE_READ_TIMEOUT: "10000"
     NOTIFICATIONS_SERVICE_CONNECTION_TIMEOUT: "10000"
-    TRANSACTIONS_SERVICE_URI: https://api.platform.pagopa.it/ecommerce/transaction-auth-requests-service/v1
+    TRANSACTIONS_SERVICE_URI: http://localhost
     TRANSACTIONS_SERVICE_READ_TIMEOUT: "10000"
     TRANSACTIONS_SERVICE_CONNECTION_TIMEOUT: "10000"
-    PERSONAL_DATA_VAULT_API_BASE_PATH: "https://api.tokenizer.pdv.pagopa.it/tokenizer/v1"
-    OTEL_RESOURCE_ATTRIBUTES: "service.name=pagopa-ecommerce-event-dispatcher-service,service.deployment.environment=prod"
+    PERSONAL_DATA_VAULT_API_BASE_PATH: "http://localhost"
+    OTEL_RESOURCE_ATTRIBUTES: "service.name=pagopa-ecommerce-event-dispatcher-service-test,service.deployment.environment=prod"
     OTEL_EXPORTER_OTLP_ENDPOINT: "http://otel-collector.elastic-system.svc:4317"
     OTEL_EXPORTER_OTLP_PROTOCOL: grpc
     OTEL_TRACES_EXPORTER: otlp
@@ -156,7 +156,7 @@ microservice-chart:
     ECS_SERVICE_NAME: pagopa-ecommerce-event-dispatcher-service
     ECS_SERVICE_ENVIRONMENT: prod
     TRANSIENT_QUEUES_TTL_SECONDS: "2592000"
-    NPG_URI: https://xpay.nexigroup.com/api/phoenix-0.0
+    NPG_URI: http://localhost
     NPG_READ_TIMEOUT: "10000"
     NPG_CONNECTION_TIMEOUT: "10000"
     NPG_CARDS_PSP_LIST: "BCITITMM,CIPBITMM,BIC36019,UNCRITMM,BPPIITRRXXX,PPAYITR1XXX,BNLIITRR,PASCITMM,WOLLNLB1,BPMOIT22,SARDIT31,IFSPIT21"
@@ -172,31 +172,31 @@ microservice-chart:
     NODE_FORWARDER_URL: "https://api.platform.pagopa.it/pagopa-node-forwarder/api/v1"
     NODE_FORWARDER_READ_TIMEOUT: "10000"
     NODE_FORWARDER_CONNECTION_TIMEOUT: "10000"
-    REDIRECT_PAYMENT_TYPE_CODES: "PPAYITR1XXX-RBPB,CHECKOUT-PPAYITR1XXX-RBPP,PPAYITR1XXX-RBPR"
     DEPLOYMENT_VERSION: "PROD"
+    REDIRECT_PAYMENT_TYPE_CODES: ""
+    PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: "payment-transactions-gateway-api-key"
+    NPG_API_KEY: "npg-api-key"
+    NPG_CARDS_PSP_KEYS: "{}"
+    NODE_FORWARDER_API_KEY: "node-forwarder-api-key"
+    REDIRECT_URL_MAPPING: "{}"
+    NPG_PAYPAL_PSP_KEYS: "{}"
+    NPG_BANCOMATPAY_PSP_KEYS: "{}"
+    NPG_MYBANK_PSP_KEYS: "{}"
+    NPG_SATISPAY_PSP_KEYS: "{}"
+    NPG_APPLEPAY_PSP_KEYS: "{}"
+    MONGO_PASSWORD: ""
+    NOTIFICATIONS_SERVICE_API_KEY: "notifications-service-api-key"
+    TRANSACTIONS_SERVICE_API_KEY: "transactions-service-auth-update-api-key"
+    ECOMMERCE_PERSONAL_DATA_VAULT_API_KEY: "personal-data-vault-api-key"
+    WALLET_SESSION_PERSONAL_DATA_VAULT_API_KEY: "personal-data-vault-api-key-wallet-session"
+    NODO_CONNECTION_STRING: '{"idPSP":"idPsp","idChannel":"idChannel","idBrokerPSP":"idBrokerPsp","password":"password"}'
   envSecret:
     ECOMMERCE_STORAGE_TRANSIENT_QUEUE_KEY: ecommerce-storage-transient-account-key
-    MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-access-key
     REDIS_HOST: redis-ecommerce-hostname
-    NODO_CONNECTION_STRING: nodo-connection-string
     QUEUE_TRANSIENT_CONNECTION_STRING: ecommerce-storage-transient-connection-string
     QUEUE_DEADLETTER_CONNECTION_STRING: ecommerce-storage-deadletter-connection-string
-    NOTIFICATIONS_SERVICE_API_KEY: notifications-service-api-key
-    TRANSACTIONS_SERVICE_API_KEY: transactions-service-auth-update-api-key
-    ECOMMERCE_PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
-    WALLET_SESSION_PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key-wallet-session
     OTEL_EXPORTER_OTLP_HEADERS: elastic-otel-token-header
-    PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
-    NPG_API_KEY: npg-api-key
-    NPG_CARDS_PSP_KEYS: npg-cards-psp-keys
-    NODE_FORWARDER_API_KEY: node-forwarder-api-key
-    REDIRECT_URL_MAPPING: redirect-url-mapping
-    NPG_PAYPAL_PSP_KEYS: npg-paypal-psp-keys
-    NPG_BANCOMATPAY_PSP_KEYS: npg-bancomatpay-psp-keys
-    NPG_MYBANK_PSP_KEYS: npg-mybank-psp-keys
-    NPG_SATISPAY_PSP_KEYS: npg-satispay-psp-keys
-    NPG_APPLEPAY_PSP_KEYS: npg-apple-pay-psp-keys
   keyvault:
     name: "pagopa-p-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
