feat(NPG refund): perform refund x minutes after auth request

--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -62,6 +62,7 @@ npg.authorization.satispay.keys={"psp1-satispay":"satispay-key1","psp2-satispay"
 npg.authorization.satispay.pspList=psp1-satispay,psp2-satispay
 npg.authorization.applepay.keys={"psp1-applepay":"applepay-key1","psp2-applepay":"applepay-key2"}
 npg.authorization.applepay.pspList=psp1-applepay,psp2-applepay
+npg.refund.delayFromAuthRequestMinutes=10
 redisStream.eventController.streamKey=event-dispatcher-commands
 redisStream.eventController.consumerGroupPrefix=event-dispatcher
 redisStream.eventController.consumerNamePrefix=event-dispatcher
