--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -171,6 +171,7 @@ microservice-chart:
     NODE_FORWARDER_CONNECTION_TIMEOUT: "10000"
     REDIRECT_PAYMENT_TYPE_CODES: "PPAYITR1XXX-RBPB,CHECKOUT-PPAYITR1XXX-RBPP,PPAYITR1XXX-RBPR"
     DEPLOYMENT_VERSION: "PROD"
+    NPG_REFUND_DELAY_FROM_AUTH_REQUEST_MINUTES: 10
   envSecret:
     ECOMMERCE_STORAGE_TRANSIENT_QUEUE_KEY: ecommerce-storage-transient-account-key
     MONGO_PASSWORD: mongo-ecommerce-password
