--- a/.env.example
+++ b/.env.example
@@ -85,3 +85,4 @@ NPG_SATISPAY_PSP_LIST=BCITITMM
 NPG_SATISPAY_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-SATISPAY"}
 NPG_APPLEPAY_PSP_LIST=BCITITMM
 NPG_APPLEPAY_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-APPLEPAY"}
+NPG_REFUND_DELAY_FROM_AUTH_REQUEST_MINUTES=10
