--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -38,6 +38,7 @@ microservice-chart:
     tag: "1.24.1"
     pullPolicy: Always
   livenessProbe:
+    handlerType: httpGet
     httpGet:
       path: /actuator/health/liveness
       port: 9000
@@ -45,6 +46,7 @@ microservice-chart:
     failureThreshold: 6
     periodSeconds: 10
   readinessProbe:
+    handlerType: httpGet
     httpGet:
       path: /actuator/health/readiness
       port: 9000
