add user stats service client integration

--- a/.env.example
+++ b/.env.example
@@ -86,3 +86,7 @@ NPG_SATISPAY_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-SATISPAY"}
 NPG_APPLEPAY_PSP_LIST=BCITITMM
 NPG_APPLEPAY_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-APPLEPAY"}
 NPG_REFUND_DELAY_FROM_AUTH_REQUEST_MINUTES=10
+USER_STATS_URL=http://localhost:8098
+USER_STATS_READ_TIMEOUT=10000
+USER_STATS_CONNECTION_TIMEOUT=10000
+USER_STATS_API_KEY=user-stats-api-key
