fix client invocation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -89,3 +89,6 @@ userStatsService.uri=${USER_STATS_URL}
 userStatsService.readTimeout=${USER_STATS_READ_TIMEOUT}
 userStatsService.connectionTimeout=${USER_STATS_CONNECTION_TIMEOUT}
 userStatsService.apiKey=${USER_STATS_API_KEY}
+logging.level.root=\${ROOT_LOGGING_LEVEL:INFO}
+logging.level.it.pagopa=\${APP_LOGGING_LEVEL:INFO}
+logging.level.web=\${WEB_LOGGING_LEVEL:DEBUG}
