delay time is now from parameter in env

--- a/.env.example
+++ b/.env.example
@@ -86,3 +86,4 @@ NPG_SATISPAY_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-SATISPAY"}
 NPG_APPLEPAY_PSP_LIST=BCITITMM
 NPG_APPLEPAY_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-APPLEPAY"}
 NPG_REFUND_DELAY_FROM_AUTH_REQUEST_MINUTES=10
+NPG_REFUND_DELAY_FOR_REFUND_OPERATIONS=10
