--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -89,3 +89,4 @@ userStatsService.uri=${USER_STATS_URL}
 userStatsService.readTimeout=${USER_STATS_READ_TIMEOUT}
 userStatsService.connectionTimeout=${USER_STATS_CONNECTION_TIMEOUT}
 userStatsService.apiKey=${USER_STATS_API_KEY}
+userStatsService.enableSaveLastUsage=${USER_STATS_SERVICE_ENABLE_SAVE_LAST_USAGE:true}
