--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -78,3 +78,4 @@ userStatsService.uri=http://localhost/userstats
 userStatsService.readTimeout=10000
 userStatsService.connectionTimeout=10000
 userStatsService.apiKey=userStatsApiKey
+userStatsService.enableSaveLastUsage=true
