--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -71,6 +71,7 @@ npg.authorization.satispay.pspList=${NPG_SATISPAY_PSP_LIST}
 npg.authorization.applepay.keys=${NPG_APPLEPAY_PSP_KEYS}
 npg.authorization.applepay.pspList=${NPG_APPLEPAY_PSP_LIST}
 npg.refund.delayFromAuthRequestMinutes=${NPG_REFUND_DELAY_FROM_AUTH_REQUEST_MINUTES}
+npg.refund.eventProcessingDelaySeconds=${NPG_REFUND_EVENT_PROCESSING_DELAY_SECONDS}
 redisStream.eventController.streamKey=${REDIS_STREAM_EVENT_CONTROLLER_STREAM_KEY}
 redisStream.eventController.consumerGroupPrefix=${REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_GROUP_PREFIX}
 redisStream.eventController.consumerNamePrefix=${REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_NAME_PREFIX}
