set right url for user stats service

--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -179,7 +179,7 @@ microservice-chart:
     REDIRECT_PAYMENT_TYPE_CODES: "PPAYITR1XXX-RBPB,CHECKOUT-PPAYITR1XXX-RBPP,PPAYITR1XXX-RBPR"
     DEPLOYMENT_VERSION: "PROD"
     NPG_REFUND_DELAY_FROM_AUTH_REQUEST_MINUTES: "10"
-    USER_STATS_URL: "https://api.platform.pagopa.it/userstats/api/v1"
+    USER_STATS_URL: "https://api.platform.pagopa.it/ecommerce/user-stats-service/v1/"
     USER_STATS_READ_TIMEOUT: "10000"
     USER_STATS_CONNECTION_TIMEOUT: "10000"
     USER_STATS_SERVICE_ENABLE_SAVE_LAST_USAGE: "false"
