[CHK-3286] Save last payment method used (#341)
* add node service tests to check null value for masked email and card data for null walletDetails

* fix spotless

* add tests

* add user stats service client integration

* fix tests

* remove unused method

* remove comments

* fix spotless

* fix client invocation

* restore logback

* remove log level for application properties

* remove unuseful exception

* fix spotless

* remove if-else inside reactive chain

* Revert "remove if-else inside reactive chain"

This reverts commit c1e5ab1f7e3f271f8cbc5299467ac60f7e532c03.

* feat: update user stats api ref (POST -> PUT)

* fix: update api key ref

* feat: add ff for save last used method (#343)

* fix: POST save usage for ongoing transactions (#344)

perform POST save usage api call also for those transactions that have reach a state after AUTHORIZATION_REQUESTED status once received event

* set right url for user stats service

* set commons version to 1.28.0

---------

Co-authored-by: Gianluca Ciuffa <gianlucaciuffa@MBP-di-Gianluca.homenet.telecomitalia.it>
Co-authored-by: Pietro Tota <pietro.tota@pagopa.it>
Co-authored-by: Pietro Tota <115724836+pietro-tota@users.noreply.github.com>

--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -75,3 +75,8 @@ redirect.paymentTypeCodes=psp1-redirect,psp2-redirect
 redirect.pspUrlMapping={"psp1-redirect":'http://localhost:8096/redirections',"psp2-redirect":'http://localhost:8096/redirections'}
 node.forwarder.readTimeout=10000
 node.forwarder.connectionTimeout=10000
+userStatsService.uri=http://localhost/userstats
+userStatsService.readTimeout=10000
+userStatsService.connectionTimeout=10000
+userStatsService.apiKey=userStatsApiKey
+userStatsService.enableSaveLastUsage=true
