--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -86,3 +86,8 @@ node.forwarder.apiKey=${NODE_FORWARDER_API_KEY}
 node.forwarder.url=${NODE_FORWARDER_URL}
 node.forwarder.readTimeout=${NODE_FORWARDER_READ_TIMEOUT}
 node.forwarder.connectionTimeout=${NODE_FORWARDER_CONNECTION_TIMEOUT}
+userStatsService.uri=${USER_STATS_URL}
+userStatsService.readTimeout=${USER_STATS_READ_TIMEOUT}
+userStatsService.connectionTimeout=${USER_STATS_CONNECTION_TIMEOUT}
+userStatsService.apiKey=${USER_STATS_API_KEY}
+userStatsService.enableSaveLastUsage=${USER_STATS_SERVICE_ENABLE_SAVE_LAST_USAGE:true}
