split business logic to handle get state and save last used method

--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -80,3 +80,4 @@ userStatsService.readTimeout=10000
 userStatsService.connectionTimeout=10000
 userStatsService.apiKey=userStatsApiKey
 userStatsService.enableSaveLastUsage=true
+transactionAuthorizationOutcomeWaiting.firstAttemptOffsetSeconds=180
