--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -178,7 +178,7 @@ microservice-chart:
     NODE_FORWARDER_CONNECTION_TIMEOUT: "10000"
     REDIRECT_PAYMENT_TYPE_CODES: "BPPIITRRXXX-RBPR,BPPIITRRXXX-RBPP,BPPIITRRXXX-RBPB,PPAYITR1XXX-RBPB,CHECKOUT-PPAYITR1XXX-RBPP,IO-PPAYITR1XXX-RBPP,PPAYITR1XXX-RBPR,RBPS,RPIC,RICO"
     NPG_REFUND_DELAY_FROM_AUTH_REQUEST_MINUTES: "10"
-    USER_STATS_URL: "https://api.uat.platform.pagopa.it/ecommerce/user-stats-service/v1/"
+    USER_STATS_URL: "https://weuuat.ecommerce.internal.uat.platform.pagopa.it/pagopa-ecommerce-user-stats-service/user-stats-service/v1/"
     USER_STATS_READ_TIMEOUT: "10000"
     USER_STATS_CONNECTION_TIMEOUT: "10000"
     NPG_REFUND_EVENT_PROCESSING_DELAY_SECONDS: "10"
