--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,7 @@ refundRetry.maxAttempts=${REFUND_RETRY_EVENT_MAX_ATTEMPTS}
 closePaymentRetry.eventOffsetSeconds=${CLOSE_PAYMENT_RETRY_EVENT_BASE_INTERVAL_SECONDS}
 closePaymentRetry.maxAttempts=${CLOSE_PAYMENT_RETRY_EVENT_MAX_ATTEMPTS}
 closePaymentRetry.paymentTokenValidityTimeOffset=${CLOSE_PAYMENT_RETRY_EVENT_PAYMENT_TOKEN_VALIDITY_TIME_OFFSET:10}
+transactionAuthorizationOutcomeWaiting.firstAttemptDelaySeconds=${AUTHORIZATION_OUTCOME_FIRST_ATTEMPT_DELAY_SECONDS}
 transactionAuthorizationOutcomeWaiting.eventOffsetSeconds=${AUTHORIZATION_OUTCOME_WAITING_EVENT_BASE_INTERVAL_SECONDS}
 transactionAuthorizationOutcomeWaiting.maxAttempts=${AUTHORIZATION_OUTCOME_WAITING_EVENT_MAX_ATTEMPTS}
 transactionAuthorizationOutcomeWaiting.paymentTokenValidityTimeOffsetSeconds=${AUTHORIZATION_OUTCOME_WAITING_EVENT_PAYMENT_TOKEN_VALIDITY_TIME_OFFSET_SECONDS:10}
