--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -183,7 +183,7 @@ microservice-chart:
     USER_STATS_URL: "https://api.platform.pagopa.it/ecommerce/user-stats-service/v1/"
     USER_STATS_READ_TIMEOUT: "10000"
     USER_STATS_CONNECTION_TIMEOUT: "10000"
-    USER_STATS_SERVICE_ENABLE_SAVE_LAST_USAGE: "false"
+    USER_STATS_SERVICE_ENABLE_SAVE_LAST_USAGE: "true"
     NPG_REFUND_EVENT_PROCESSING_DELAY_SECONDS: "10"
   envSecret:
     ECOMMERCE_STORAGE_TRANSIENT_QUEUE_KEY: ecommerce-storage-transient-account-key
