fix: restore max surge and max unavailable to 100%

--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -83,8 +83,8 @@ microservice-chart:
   strategy:
     type: "RollingUpdate"
     rollingUpdate:
-      maxSurge: 2
-      maxUnavailable: 0
+      maxSurge: "100%"
+      maxUnavailable: "100%"
   autoscaling:
     enable: true
     minReplica: 5
