fix(env local): add missing properties

--- a/.env.example
+++ b/.env.example
@@ -91,3 +91,8 @@ USER_STATS_READ_TIMEOUT=10000
 USER_STATS_CONNECTION_TIMEOUT=10000
 USER_STATS_API_KEY=user-stats-api-key
 NPG_REFUND_EVENT_PROCESSING_DELAY_SECONDS=10
+AUTHORIZATION_OUTCOME_FIRST_ATTEMPT_DELAY_SECONDS=10
+OTEL_TRACES_EXPORTER=none
+OTEL_METRICS_EXPORTER=none
+OTEL_LOGS_EXPORTER=none
+OTEL_TRACES_SAMPLER=always_off
