--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -165,11 +165,11 @@ microservice-chart:
     NPG_READ_TIMEOUT: "10000"
     NPG_CONNECTION_TIMEOUT: "10000"
     NPG_CARDS_PSP_LIST: "BCITITMM,CIPBITMM,BIC36019,UNCRITMM,BPPIITRRXXX,PPAYITR1XXX,BNLIITRR,PASCITMM,WOLLNLB1,BPMOIT22,SARDIT31,IFSPIT21,BCEPITMM"
-    NPG_PAYPAL_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
-    NPG_MYBANK_PSP_LIST: "UNCRITMM" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
-    NPG_BANCOMATPAY_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
-    NPG_SATISPAY_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
-    NPG_APPLEPAY_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
+    NPG_PAYPAL_PSP_LIST: "BCITITMM,SIGPITM1XXX"
+    NPG_MYBANK_PSP_LIST: "BCITITMM,UNCRITMM"
+    NPG_BANCOMATPAY_PSP_LIST: "BCITITMM"
+    NPG_SATISPAY_PSP_LIST: "SATYLUL1"
+    NPG_APPLEPAY_PSP_LIST: "SIGPITM1XXX"
     REDIS_STREAM_EVENT_CONTROLLER_STREAM_KEY: "event-dispatcher-commands"
     REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_GROUP_PREFIX: "event-dispatcher"
     REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_NAME_PREFIX: "event-dispatcher"
