fix: add tests mongo connection string parameter for connection timeout

--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -21,7 +21,7 @@ spring.redis.host=redis
 spring.redis.password=redis
 spring.redis.port=9999
 spring.redis.ssl=false
-spring.data.mongodb.uri=mongodb://mongo:mongo@$mongo:6080/
+spring.data.mongodb.uri=mongodb://mongo:mongo@$mongo:6080/?&readPreference=primaryPreferred&maxStalenessSeconds=90&minPoolSize=0&maxPoolSize=10&maxIdleTimeMS=100&connectTimeoutMS=100&socketTimeoutMS=100&serverSelectionTimeoutMS=100&waitQueueTimeoutMS=100&heartbeatFrequencyMS=100
 spring.data.mongodb.database=ecommerce
 server.port=9000
 management.endpoint.health.probes.enabled=true
