--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -12,7 +12,7 @@ resources:
     - repository: pagopaEcommerceLocal
       type: github
       name: pagopa/pagopa-ecommerce-local
-      ref: main
+      ref: CHK-3644-event-dispatcher-queue-api-tests
       endpoint: 'io-azure-devops-github-ro'
 
 stages:
@@ -97,6 +97,8 @@ stages:
             displayName: 'Run api test for NPG integration'
           - script: newman run api-tests/transaction-service/redirect/transaction-service_ecommerce_local.postman_collection.json --environment=api-tests/transaction-service/redirect/transaction-service_ecommerce_local.postman_environment.json --reporters cli,junit --reporter-junit-export Results/REDIRECT-api-TEST.xml
             displayName: 'Run api test for REDIRECT integration'
+          - script: newman run api-tests/event-dispatcher-service/ecommerce-event-dispatcher_tests.postman_collection.json --environment=api-tests/event-dispatcher-service/ecommerce-event-dispatcher_tests.postman_environment.json --reporters cli,junit --reporter-junit-export Results/event-dispatcher-api-TEST.xml
+            displayName: 'Run api test for event-dispatcher'
             continueOnError: false
           - task: PublishTestResults@2
             inputs:
