chore(redis-stream): [PIDM-196] update .env.example
add missing envs allowing local project run;

--- a/.env.example
+++ b/.env.example
@@ -96,3 +96,11 @@ OTEL_TRACES_EXPORTER=none
 OTEL_METRICS_EXPORTER=none
 OTEL_LOGS_EXPORTER=none
 OTEL_TRACES_SAMPLER=always_off
+
+AUTHORIZATION_OUTCOME_WAITING_EVENT_BASE_INTERVAL_SECONDS=10
+AUTHORIZATION_OUTCOME_WAITING_EVENT_MAX_ATTEMPTS=3
+AUTHORIZATION_OUTCOME_WAITING_EVENT_PAYMENT_TOKEN_VALIDITY_TIME_OFFSET_SECONDS=10
+TRANSACTIONS_SERVICE_API_KEY=api-key
+TRANSACTIONS_SERVICE_URI="http://pagopa-ecommerce-transactions-service:8080/"
+TRANSACTIONS_SERVICE_READ_TIMEOUT=10000
+TRANSACTIONS_SERVICE_CONNECTION_TIMEOUT=10000
