--- a/.devops/azure-templates/helm-microservice-chart-deploy.yml
+++ b/.devops/azure-templates/helm-microservice-chart-deploy.yml
@@ -57,6 +57,10 @@ steps:
       waitForExecution: ${{ parameters.WAIT_FOR_EXECUTION }}
       arguments: ${{ parameters.ARGUMENTS }}
       overrideValues: microservice-chart.image.tag=${{ parameters.GREEN_VERSION }},microservice-chart.canaryDelivery.create=${{ parameters.DO_BLUE_GREEN_DEPLOY }},microservice-chart.canaryDelivery.deployment.image.tag=${{ parameters.BLUE_VERSION }}
+      ${{ if eq(parameters['DO_BLUE_GREEN_DEPLOY'], True) }}:
+        overrideValues: microservice-chart.image.tag=${{ parameters.GREEN_VERSION }},microservice-chart.canaryDelivery.create=true,microservice-chart.canaryDelivery.image.tag=${{ parameters.BLUE_VERSION }},microservice-chart.fullnameOverride=beta-pagopa-ecommerce-event-dispatcher-service
+      ${{ else }}:
+        overrideValues: microservice-chart.image.tag=${{ parameters.GREEN_VERSION }},microservice-chart.canaryDelivery.create=false
   - template: ./chart-current-version.yml
   - ${{ if ne(parameters['APPINSIGHTS_SERVICE_CONN'], 'none') }}:
       - task: AzureCLI@2
