--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,7 @@ spring.cloud.azure.storage.queue.endpoint=${ECOMMERCE_STORAGE_TRANSIENT_QUEUE_EN
 nodo.uri=${NODO_URI}
 nodo.readTimeout=${NODO_READ_TIMEOUT}
 nodo.connectionTimeout=${NODO_CONNECTION_TIMEOUT}
+nodo.closepayment.apikey=${NODO_CLOSEPAYMENT_API_KEY}
 nodo.ecommerce.clientId=${NODO_ECOMMERCE_CLIENT_ID}
 spring.data.mongodb.uri=mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@${MONGO_HOST}:${MONGO_PORT}/?ssl=${MONGO_SSL_ENABLED}&readPreference=primaryPreferred&maxStalenessSeconds=90&minPoolSize=${MONGO_MIN_POOL_SIZE}&maxPoolSize=${MONGO_MAX_POOL_SIZE}&maxIdleTimeMS=${MONGO_MAX_IDLE_TIMEOUT_MS}&connectTimeoutMS=${MONGO_CONNECTION_TIMEOUT_MS}&socketTimeoutMS=${MONGO_SOCKET_TIMEOUT_MS}&serverSelectionTimeoutMS=${MONGO_SERVER_SELECTION_TIMEOUT_MS}&waitQueueTimeoutMS=${MONGO_WAITING_QUEUE_MS}&heartbeatFrequencyMS=${MONGO_HEARTBEAT_FREQUENCY_MS}
 spring.data.mongodb.database=ecommerce
